@@ -1,12 +1,14 @@
 package com.domingueti.tradebot.modules.Investment.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.domingueti.tradebot.modules.Investment.dtos.InvestmentDTO;
+import com.domingueti.tradebot.modules.Investment.models.Investment;
 import com.domingueti.tradebot.modules.Investment.repositories.InvestmentRepository;
 
 @Service
@@ -17,9 +19,9 @@ public class GetInvestmentsService {
 	
 	@Transactional(readOnly = true)
 	public List<InvestmentDTO> execute() {
-//		validator.execute(userId); check with authenticated userId;
 		
-		return investmentRepository.findAll().stream()
-				.map(InvestmentDTO::new).toList();
+		List<Investment> investments = investmentRepository.findAllByDeletedAtIsNull();
+		
+		return investments.stream().map(InvestmentDTO::new).collect(Collectors.toList());
 	}
 }
